# DeepLearn-XeonCafPhi

./: CONTRIBUTORS.md  Makefile.config  Makefile.config.example  README.md
cmake/: Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  Summary.cmake
cmake/Modules/: FindGFlags.cmake  FindLAPACK.cmake  FindOpenBLAS.cmake  FindvecLib.cmake
cmake/Templates/: CaffeConfig.cmake.in  CaffeConfigVersion.cmake.in  caffe_config.h.in
docs/: development.md  install_apt.md  install_osx.md  install_yum.md  installation.md  performance_hardware.md
docs/stylesheets/: styles.css
docs/tutorial/: index.md  loss.md  net_layer_blob.md  solver.md
examples/: classification.ipynb  filter_visualization.ipynb  hdf5_classification.ipynb
examples/cifar10/: cifar10_quick_solver.prototxt  readme.md
examples/feature_extraction/: imagenet_val.prototxt
examples/hdf5_classification/: solver.prototxt  train_val.prototxt  train_val2.prototxt
examples/imagenet/: create_imagenet.sh  readme.md  resume_training.sh
examples/mnist/: create_mnist.sh  lenet_multistep_solver.prototxt  lenet_solver.prototxt  lenet_stepearly_solver.prototxt  lenet_train_test.prototxt  mnist_autoencoder_solver_adagrad.prototxt  readme.md  (+2 more)
matlab/: CMakeLists.txt
python/: CMakeLists.txt  classify.py
python/caffe/: __init__.py  classifier.py  draw.py  io.py  pycaffe.py
python/caffe/test/: test_solver.py
scripts/: deploy_docs.sh  download_model_binary.py  download_model_from_gist.sh
setup/: time_train_lenet.sh  train_mnist.sh
tools/: caffe.cpp  convert_imageset.cpp  upgrade_net_proto_text.cpp
(+110 files in other folders)
